# tergite-frontend

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  config.alloy  e2e_test.sh  fresh-docker-compose.yml  mss-config.example.toml  prebuilt-docker-compose.yml
.github/workflows/: dashboard-ci.yml  mss-ci.yml
apps/tergite-dashboard/: .env.test  CHANGELOG.md  Dockerfile  package-lock.json  package.json  run-nginx.sh  types.ts
apps/tergite-dashboard/api/: utils.ts
apps/tergite-dashboard/api/routes/: general.ts
apps/tergite-dashboard/cypress/e2e/: device-detail.cy.ts  home.cy.ts
apps/tergite-dashboard/cypress/fixtures/: backend-with-db.Dockerfile  backend_db.sql  bcc-users.json  booking_db.db  bookings-configs.json  bookings.json  e2e-docker-compose.yml  generic.seed.toml  likee.seed.toml  likee.toml  loke.seed.toml  loke.toml  mongo-init.js  mongo-router.sh  mongo.Dockerfile  mss-config.toml  (+26 more)
apps/tergite-dashboard/src/: router.tsx
apps/tergite-mss/: CHANGELOG.md  Dockerfile  README.md  mss-config.example.toml  pyproject.toml  settings.py  start_mss.sh
apps/tergite-mss/api/rest/: __init__.py  app_kwargs.py  dependencies.py  middleware.py  utils.py
apps/tergite-mss/api/rest/routers/: admin.py  auth.py  booking.py  calibrations.py  devices.py  jobs.py  schedule.py
apps/tergite-mss/api/rest/routers/devices/: __init__.py  events.py
apps/tergite-mss/docs/: auth.md
apps/tergite-mss/services/auth/: service.py
apps/tergite-mss/services/auth/app_tokens/: authenticator.py
apps/tergite-mss/services/auth/projects/: routers.py
apps/tergite-mss/services/auth/providers/: __init__.py  dtos.py
apps/tergite-mss/services/auth/users/: database.py
apps/tergite-mss/services/calibration/: __init__.py  dtos.py
apps/tergite-mss/services/devices/: __init__.py  dtos.py  service.py
apps/tergite-mss/services/jobs/: __init__.py  dtos.py
apps/tergite-mss/tests/: conftest.py  test_store.py
apps/tergite-mss/tests/_utils/: bcc.py  env.py  mock_backend.py  records.py
apps/tergite-mss/tests/api/rest/: test_admin.py  test_auth.py  test_booking.py  test_calibrations.py  test_devices.py  test_jobs.py  test_me.py
apps/tergite-mss/tests/api/scripts/: test_puhuri_sync.py
apps/tergite-mss/tests/fixtures/: bcc_jwt_tokens.json  calibrations.json  config.test.toml  disabled_puhuri_config.test.toml  invalid_bookings.json  job_list.json  job_updates.json  mss_private_key.pem  mss_public_key.pem  pagination.json  private-loki-key.pem  private-pegu-key.pem  private-pingu-key.pem  private-thea-key.pem  private-thor-key.pem  private-wrong-cert-key.pem  public-loki-key.pem  valid_bookings.json
apps/tergite-mss/utils/: api.py  config.py  crypto.py  date_time.py  exc.py  logging.py  mongodb.py  redis_store.py
(+20 files in other folders)
