# This code is part of Tergite
#
# (C) Copyright Miroslav Dobsicek 2021
# (C) Copyright Abdullah-Al Amin 2021
# (C) Copyright Martin Ahindura 2023
# (C) Copyright Chalmers Next Labs 2025
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tergite-mss"
authors = [
    {name = "Miroslav Dobsicek"},
    {name = "Martin Ahindura"},
]
maintainers = [
    {name = "Chalmers Next Labs AB", email = "contact@quantum.chalmersnextlabs.se"}
]
version = "2025.09.0"
description = "the public API for the WACQT quantum computer."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["quantum", "qiskit", "quantify"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi~=0.115.12",
    "motor>=3.6.0",
    "requests>=2.25.1",
    "uvicorn>=0.31.1",
    "aiohttp[speedups]>=3.10.9,<4.0.0",
    "fastapi-users>=13.0.0",
    "fastapi-users-db-beanie>=3.0.0",
    "python-multipart>=0.0.9",
    "httpx~=0.27.2",
    "httpx-oauth>=0.15.1",
    "tomli",
    "beanie>=1.27.0",
    "email-validator>=2.0.0.post2",
    "cryptography>=1.17.1",
    "python-waldur-client @ https://github.com/waldur/python-waldur-client/archive/refs/tags/0.4.6.zip",
]

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
    "black==23.11.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "pytest-freezegun>=0.4.2",
    "pytest-asyncio>=0.21.1,<0.23.0",
    "pytest-mock>=3.11.1",
    "respx>=0.20.2",
    "filelock>=3.12.2",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/tergite/tergite-frontend/tree/main/apps/tergite-mss"
Repository = "https://github.com/tergite/tergite-frontend"
Documentation = "https://github.com/tergite/tergite-frontend/tree/main/apps/tergite-mss/docs"
Issues = "https://github.com/tergite/tergite-frontend/issues"
Changelog = "https://github.com/tergite/tergite-frontend/blob/main/apps/tergite-mss/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.isort]
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"